methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:15: error: type mismatch;
 found   : Unit
 required: Boolean
while (!isOverBaggle()) {
^