methods.returning.MethodsReturning.scala.code
var seenBaggle = false
var sawBaggle = false

def haveBaggle():Boolean = {
  if (isOverBaggle()) {
    sawBaggle = true
    }
  if (sawBaggle) {
    seenBaggle = true
  }
  return seenBaggle


  
while (!isOverBaggle()) {
  for (i <- 1 to 7) {
    forward()
  }
  haveBaggle()
  backward(7)
}
  
}